--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="script.js" type="module"></script>
     <title>Тетрис</title>
 </head>
 <body>
@@ -209,6 +210,5 @@
         <div></div>
         <div></div>
     </div>
-    <script src="script.js" type="module"></script>
 </body>
 </html>
